--- a/portfolio_tech/index.html
+++ b/portfolio_tech/index.html
@@ -56,7 +56,7 @@
     <div class="vocation"> Web Application Developer</div>
     <div class="skills">HTML / CSS / Javascript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker(Basics)</div>
     <p>
-        An SPA that displays subreddit data from Reddit for a specific time period. As the front-end developer i worked 
+         As the front-end developer I worked on several mobile projects and quite a few web applications.
     </p>
     <div class="email">rh03558@icloud.com</div>
     <div class ="icons"> 
@@ -65,6 +65,59 @@
 
     </div>
 </div>
+ <div id="project">  
+    <h2><span class="font-primary">P</span>roject</h2>
+
+    <!--   Table View cards                  (1)    -->
+    <div class="card mb-3">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="img/tappyFlightIcon.png" class="img-fluid rounded-start" alt="tappyFlightProject"><a href="https://apprecs.com/ios/828025351/tappy-flight"><span>D</span>ownload</a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Tappy Flight</h5>
+              <p class="card-text">This is a simple endless game with one touch gameplay. Avoid flying objects and earn points to score high.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--     Table view Cards             (2)    -->
+      <div class="card mb-3">
+        <div class="row ">
+          <div class="col-md-4">
+            <img src="img/shoeFreakIcon.jpeg" class="img-fluid rounded-start" alt="shoeFreakProject"><a href="https://appadvice.com/game/app/shoe-freak/969810450 "><span>D</span>ownload</a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Shoe Freak</h5>
+              <p class="card-text">This is an entertainment playform for sneakerheads. Find out which kicks are dope or trending by downloading the app.</p>
+              <p class="card-text"><small class="text-muted">Last updated 4 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--     Table view cards                  (3)-->
+      <div class="card mb-3">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="..." class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Twitter Clone</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 5 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+ </div>   
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 </html>
