Minor bug fixes

--- a/portfolio_tech/index.html
+++ b/portfolio_tech/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="icon" type="image/png" href="img/techis-logo.png">
+    <link rel="icon" type="img/pnf" href="./img/rashiih.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet" />
 </head>
@@ -33,20 +33,13 @@
                     <ul class="navbar-nav ms-auto mb-2">
                         <li class="nav-item">
                             <a class="nav-link font-black" href="#about">About </a>
+                          </li>
                         <li class="nav-item">
-                            <a class="nav-link font-black" href="#projects">Projects </a>
-
-                        </li>
-
-
+                            <a class="nav-link font-black" href="#Projects">Projects</a>
                         </li>
                     </ul>
-
-
-
                 </div>
             </div>
-
     </nav>
 
 <div id="about">
@@ -65,7 +58,7 @@
 
     </div>
 </div>
- <div id="project">  
+ <div id="Projects">  
     <h2><span class="font-primary">P</span>roject</h2>
 
     <!--   Table View cards                  (1)    -->
